# Diplom

./: .flake8  README.md  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
fixtures/: products_data.json  users_data.json
products/: models.py  paginations.py  serializer.py  tests.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_initial.py  0003_alter_product_seller.py  0004_product_count_product_is_sell.py  0005_remove_product_count.py
users/: models.py  permissions.py  serializer.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_is_seller.py  0003_remove_user_telegram_id.py
